syntax = "proto3";

package event;

option go_package = "./protobuf/;pb";

import "google/protobuf/duration.proto";

service Events {
  rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {};
  rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse) {};
  rpc ListEvents (ListEventsRequest) returns (ListEventsResponse) {};
}

message CreateEventRequest {
  Event Event = 1;
}
message CreateEventResponse {
  string ID = 1;
}

message UpdateEventRequest {
  Event Event = 1;
}
message UpdateEventResponse {
}

message ListEventsRequest {
  int64 day = 1;
  int64 week = 2;
  int64 month = 3;
}
message ListEventsResponse {
  repeated Event Events = 1;
}


message Event {
  string ID = 1;
  string Title = 2;
  int64 DateTime = 3;
  int64 Duration = 4;
  string Text = 5;
  int64 UserID = 6;
  int64 Remind = 7;
}

